--- a/index_no_reporter.html
+++ b/index_no_reporter.html
@@ -312,30 +312,20 @@
                                             <img src="./images/main/main_con2_img3.svg" alt="" class="con_img con_img2">
 
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 276.93 332.53" class="svg_cont4" >
-                                                <!--[DEV] 기자단일 경우 -->
-                                                <image href="./images/main/main_con2_img2.svg" width="276.93" height="332.53"/>
+                                                <!--[DEV] 기자단 아닐 경우 -->
+                                                <image href="./images/main/main_con2_img2_nopress.svg" width="276.93" height="332.53"/>
                                                 <foreignObject width="200px" height="400px"  xmlns="http://www.w3.org/1999/xhtml" class="main_id_card">
-
-                                                    <a href="">
-                                                        <div class="reporter_card taC">
-                                                            <div class="reporter_card_inner">
-                                                                <div class="reporter_card_logo">
-                                                                    <img src="./images/reporter/logo_reporter.svg" alt="어린이과학동아&amp;어린이수학동아 기자단">
-                                                                </div>
-                                                                <div class="reporter_card_thumb_area">
-                                                                    <div class="reporter_card_thumb">
-                                                                        <div class="img_box">
-                                                                            <img src="./images/reporter/thumb.jpg" alt="">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="reporter_card_id">
-                                                                    <strong class="name ff_godoB">장원영</strong>
-                                                                    <span class="logo"><img src="./images/reporter/logo_ds.svg" alt=""></span>
-                                                                </div>
+                                                    <div class="reporter_card taC">
+                                                        <div class="reporter_card_inner">
+                                                            <div class="reporter_card_id">
+                                                                <strong class="name ff_godoB">장원영님,</strong>
+                                                            </div>
+                                                            <div class="join_box">
+                                                                <p class="log_txt">기자단에 가입하여 <br> 다양한 혜택을 경험해 보세요. </p>
+                                                                <button class="btn_reporter">기자단 가입</button>
                                                             </div>
                                                         </div>
-                                                    </a>
+                                                    </div>
                                                 </foreignObject>
                                                 <!--//-->
                                             </svg>
@@ -927,7 +917,7 @@
                                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 230"  class="">
                                                                     <foreignObject x="0" y="0" width="360px" height="230px"  xmlns="http://www.w3.org/1999/xhtml">
                                                                         <div class="txt_box" xmlns="http://www.w3.org/1999/xhtml">
-                                                                            <strong class="earth_notice_tit ff_godoB">지사탐 공지</strong>
+                                                                            <strong class="earth_notice_tit ff_godoB">시민과학콘 공지</strong>
                                                                             <div class="earth_notice_cont ellipsis3">1미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다.</div>
                                                                         </div>
                                                                     </foreignObject>
@@ -939,7 +929,7 @@
                                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 230"  class="">
                                                                     <foreignObject x="0" y="0" width="360px" height="230px"  xmlns="http://www.w3.org/1999/xhtml">
                                                                         <div class="txt_box" xmlns="http://www.w3.org/1999/xhtml">
-                                                                            <strong class="earth_notice_tit ff_godoB">지사탐 공지</strong>
+                                                                            <strong class="earth_notice_tit ff_godoB">시민과학콘 공지</strong>
                                                                             <div class="earth_notice_cont ellipsis3">2미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다.</div>
                                                                         </div>
                                                                     </foreignObject>
@@ -951,7 +941,7 @@
                                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 230"  class="">
                                                                     <foreignObject x="0" y="0" width="360px" height="230px"  xmlns="http://www.w3.org/1999/xhtml">
                                                                         <div class="txt_box" xmlns="http://www.w3.org/1999/xhtml">
-                                                                            <strong class="earth_notice_tit ff_godoB">지사탐 공지</strong>
+                                                                            <strong class="earth_notice_tit ff_godoB">시민과학콘 공지</strong>
                                                                             <div class="earth_notice_cont ellipsis3">3미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다.</div>
                                                                         </div>
                                                                     </foreignObject>
@@ -963,7 +953,7 @@
                                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 230"  class="">
                                                                     <foreignObject x="0" y="0" width="360px" height="230px"  xmlns="http://www.w3.org/1999/xhtml">
                                                                         <div class="txt_box" xmlns="http://www.w3.org/1999/xhtml">
-                                                                            <strong class="earth_notice_tit ff_godoB">지사탐 공지</strong>
+                                                                            <strong class="earth_notice_tit ff_godoB">시민과학콘 공지</strong>
                                                                             <div class="earth_notice_cont ellipsis3">4미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다. 미안하다 이거보여주려고 어그로 끌었다.</div>
                                                                         </div>
                                                                     </foreignObject>
