--- a/index.html
+++ b/index.html
@@ -297,6 +297,21 @@
                                             <!--[DEV] 스토리콘\웹툰\메인 -->
                                             <a href="" class="con_link con_link2"><span class="blind">스토리콘 웹툰 메인</span></a>
                                             <!-- // -->
+
+                                            <!-- 클릭유도 아이콘 세트 -->
+                                            <span class="ico_detail ico_detail1 ">
+                                                <i></i>
+                                                <a href="">스토리콘 소설</a>
+                                            </span>
+                                            <span class="ico_detail ico_detail2">
+                                                <i></i>
+                                                <a href="">스토리콘 웹툰</a>
+                                            </span>
+                                            <span class="ico_detail ico_detail3">
+                                                <i></i>
+                                                <a href="">스토리콘 갤러리</a>
+                                            </span>
+                                            <!--//-->
                                         </div>
                                     </div>
                                 </div>
