--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@
                                             <!-- // -->
 
                                             <!-- 클릭유도 아이콘 세트 -->
-                                            <span class="ico_detail ico_detail1 on">
+                                            <span class="ico_detail ico_detail1 ">
                                                 <i></i>
                                                 <a href="">스토리콘 소설</a>
                                             </span>
-                                            <span class="ico_detail ico_detail2 on">
+                                            <span class="ico_detail ico_detail2 ">
                                                 <i></i>
                                                 <a href="">스토리콘 웹툰</a>
                                             </span>
-                                            <span class="ico_detail ico_detail3 on">
+                                            <span class="ico_detail ico_detail3 ">
                                                 <i></i>
                                                 <a href="">스토리콘 갤러리</a>
                                             </span>
