--- a/index.html
+++ b/index.html
@@ -299,18 +299,39 @@
                                             <!-- // -->
 
                                             <!-- 클릭유도 아이콘 세트 -->
-                                            <span class="ico_detail ico_detail1 ">
+                                            <!-- <span class="ico_detail ico_detail1 on">
                                                 <i></i>
                                                 <a href="">스토리콘 소설</a>
                                             </span>
-                                            <span class="ico_detail ico_detail2 ">
+                                            <span class="ico_detail ico_detail2 on">
                                                 <i></i>
                                                 <a href="">스토리콘 웹툰</a>
                                             </span>
-                                            <span class="ico_detail ico_detail3 ">
+                                            <span class="ico_detail ico_detail3 on">
                                                 <i></i>
                                                 <a href="">스토리콘 갤러리</a>
-                                            </span>
+                                            </span> -->
+                                            <!--//-->
+
+                                            <!-- link info -->
+                                            <div class="link_info link_info1">
+                                                <div class="link_info_inner">
+                                                    <i></i>
+                                                    <a href="">스토리콘 소설</a>
+                                                </div>
+                                            </div>
+                                            <div class="link_info link_info2 ty_r">
+                                                <div class="link_info_inner">
+                                                    <i></i>
+                                                    <a href="">스토리콘 웹툰</a>
+                                                </div>
+                                            </div>
+                                            <div class="link_info link_info3 ty_r">
+                                                <div class="link_info_inner">
+                                                    <i></i>
+                                                    <a href="">스토리콘 갤러리</a>
+                                                </div>
+                                            </div>
                                             <!--//-->
                                         </div>
                                     </div>
