--- a/index.html
+++ b/index.html
@@ -315,18 +315,21 @@
 
                                             <!-- link info -->
                                             <div class="link_info link_info1">
+                                                <span class="ani_pos"></span>
                                                 <div class="link_info_inner">
                                                     <i></i>
                                                     <a href="">스토리콘 소설</a>
                                                 </div>
                                             </div>
                                             <div class="link_info link_info2 ty_r">
+                                                <span class="ani_pos"></span>
                                                 <div class="link_info_inner">
                                                     <i></i>
                                                     <a href="">스토리콘 웹툰</a>
                                                 </div>
                                             </div>
                                             <div class="link_info link_info3 ty_r">
+                                                <span class="ani_pos"></span>
                                                 <div class="link_info_inner">
                                                     <i></i>
                                                     <a href="">스토리콘 갤러리</a>
